DRTII-1268 Fix codeshare overflow display issue

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -1859,6 +1859,7 @@ th h2 {
 
 .arrivals__table__flight-code-value {
   min-width: 53px;
+  white-space: break-spaces;
 }
 
 .arrivals__table__flight-code__info {
